# near-balance-monitoring

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  justfile
src/: bot.rs  cli.rs  commands.rs  main.rs  near.rs  persistence.rs  utils.rs
