[package]
name = "app"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust application for monitoring NEAR Protocol account balances"
keywords = ["near", "blockchain", "monitor", "telegram", "crypto"]
categories = ["command-line-utilities", "cryptocurrency"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
pretty_env_logger = "0.5"
log = "0.4"
chrono = "0.4"
